--- a/css_dc/small.css
+++ b/css_dc/small.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Open+Sans:wght@300&family=Roboto:ital,wght@1,300&family=Rock+Salt&family=Signika:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Rock+Salt&display=swap');
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
@@ -14,8 +15,9 @@ body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
     margin: 0;
-    background-color: #131f45;
+    background-color: #1b4513;
     font-family: 'Rock Salt', 'roboto',sans-serif;
+    font-family: 'Libre Baskerville', 'roboto',sans-serif;
 }
 .grid{
     display: grid;
@@ -28,19 +30,20 @@ body {
 .decoration{
     font-size: 25px;
     padding: 25px;
-    background-color: rgb(218, 218, 112);
+    background-color: rgb(138, 138, 80);
     margin-bottom: 157px;
-    color: rgb(134, 38, 38);
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(34, 255, 0), 0 0 5px rgb(5, 215, 230);
     border-bottom: 3px solid rgb(203, 77, 77);
 }
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
-    background-color: rgb(37, 56, 199);
+    background-color: rgb(9, 112, 98);
 display: grid;
 grid-template-columns: 75px auto;
-color: rgb(242, 242, 242);
+text-align: center;
+color: rgb(255, 255, 255);
 text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 
 }
@@ -68,14 +71,15 @@ header h2 {margin: 0; font-weight: normal;}
     color: #fff;
 }
 nav {
-    background-color: #666;
+    background-color: rgb(104, 63, 63);
 }
+
 nav button {
     margin: 0 2vw;
     background-color: transparent;
     border: none;
     font-size: 2rem;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 nav ul {
     display: none;
@@ -90,7 +94,7 @@ nav ul li a {
     color: #eee;
     padding: .5rem 0;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 20px;
     text-align: center;
     border-top: 1px solid black;
 }
@@ -130,6 +134,7 @@ main {
     height: auto;
     text-align: center;
     margin-left: 160px;
+    background-color: rgb(104, 63, 63);
   }
   .flex-container2 > div {
     margin: 10px;
@@ -160,12 +165,14 @@ main {
   color: rgb(242, 242, 242);
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
   font-family: 'roboto', sans-serif;
+  background-color: rgb(9, 112, 98);
 }
 .links{
     font-family: 'roboto', sans-serif;
 }
 footer{
-    background-color: rgb(37, 56, 199);
+    
+    background-color: rgb(104, 63, 63);
 }
 .box{
     background-color: #11fc38bc;
@@ -258,4 +265,156 @@ div.hideme{display: none;}
     
     padding: 11px;
     font-size: 30px;
+}
+.s-l:hover:hover{
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+
+
+}
+#submit:hover{
+background-color: #a3ffff;
+}
+#submit{
+    width: 166px;
+    height: 50px;
+    margin: 20px;
+    font-size: 20px;
+}
+.logo:hover{
+    background-color: #cfcfcf;
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+
+}
+.affs{
+    color: white;
+    text-shadow: 2px 2px 2px black, 0 0 25px rgb(51, 255, 0), 0 0 5px rgb(0 30 7);
+}
+.affs2{
+    background-color: rgb(169, 91, 91);
+    padding: 20px;
+    border-radius: 20px;
+    margin-top: 20px;
+}
+.dip {
+    display: flex;
+    background-color: rgb(104, 63, 63);
+}
+.social img{
+    width: 65px;
+}
+.social{
+    display: flex;
+    column-gap: 10px;
+}
+.affs3{
+    text-align: center;
+    
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  .mapouter{position:relative;
+    text-align:right;
+    height:500px;
+    width:600px;}
+  .gmap_canvas {overflow:hidden;
+    background:none;
+    height:500px;
+    width:600px;
+}
+#mapframe{
+    width:600px; 
+    height:500px;
+    border: none;
+    
+}
+    form{
+        color: #ffffff;
+    }
+    .h {
+        color: white;
+        text-shadow: 2px 2px 2px black, 0 0 25px rgb(0 255 220), 0 0 5px rgb(0 30 7);
+    }
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[type=tel], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[type=email], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  textarea{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+ margin-top: 20px;
+  }
+  form label.top input:required {
+    border-left: rgb(237, 0, 0) solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+.gridizao{
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 20px;
 }
